--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express": "^4.16.3",
     "jquery": "^3.3.1",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.3",
     "rxjs": "^5.5.2",
+    "sequelize": "^4.37.6",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
